fix vertical align of label next to textarea

--- a/theme/beuster-se-2016/assets/css/form.scss
+++ b/theme/beuster-se-2016/assets/css/form.scss
@@ -96,8 +96,14 @@ form.userform {
 
       textarea {
         @include default_font;
+        display: inline-block;
         min-height: 5em;
         resize: vertical;
+        vertical-align: top;
+      }
+
+      span.textarea {
+        padding-top: 0.25em;
       }
 
       &.required span:after {
